<resources>
    <string name="app_name">LiL wayne</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home">Home</string>
	<string name="singer_name">LiL wayne</string>
	<string name="app_version">1.0.0</string>
	 <string name="tab_videos">Videos</string>
	 	<string name="tab_videos_contact">You want to add a new video ? Just contact us :)</string>
	 <string name="tab_favorites">Favorites</string>
	 <string name="tab_Musics">Musics</string>
	 	<string name="tab_Musics_contact">You want to add a new song ? Just contact us :)</string>
	 <string name="tab_playlists">Playlists</string>
	    <string name="tab_playlists_playlist_name">Playlist Name</string>
	    <string name="tab_playlists_new_playlist_name">New Playlist Name</string>
	    <string name="tab_playlists_default_playlist">Default Playlist</string>
	    <string name="tab_playlists_delete_all">Delete All</string>
	    <string name="tab_playlists_done">Done</string>
	 <string name="tab_lyrics">Lyrics</string>
	   <string name="tab_lyrics_song_nme">Song Name</string>
	   <string name="tab_lyrics_album_name">Album Name</string>
	 <string name="tab_News">News</string>
	 <string name="tab_tweets">Tweets</string>
	 <string name="tab_bio">Bio</string>
	   <string name="tab_bio_biolil">
	     
	     “You can’t compare any other artist out there to me,” the charismatic Lil Wayne rightfully declares. “They are them, I am me. Nobody can do what I can. I am the best at what I do and that’s everything.”\n\n\n
 
		Lil Wayne is hip-hop’s biggest name, deadliest lyricist, the genre’s most flourishing touring act, one of the industry’s great successful label moguls and the most versatile, in demand performer in all of music. On August 29th, Lil Wayne releases the most anticipated LP of the past three years, Tha Carter IV on Cash Money/Universal Republic Records. Tha Carter IV as Weezy has aptly nicknamed the project is the explosive follow-up to his 2008 multi-platinum chart dominating classic Tha Carter III.  Tha Carter III, is widely regarded as one of the top rap albums of all-time, is the last hip-hop album to sell one million copies in its first week of release and spawned timeless hits such as “A Milli,” “Mrs. Officer,” and his first solo number one single “Lollipop.”\n\n\n
 
		Like its predecessor, Tha Carter IV is unyielding in the amount of hits on its tracklist with songs such as‘6’7,” featuring Cory Gunz, “John,” “How To Love” and ‘She Will”  featuring Drake all in heavy rotation on radio and selling across the board on the singles charts. Guests on the new album include Jadakissand Drake on “It’s Good,’ while T-Pain joins Lil Wayne on “How To Hate.” Rick Ross, Bun B, Nas,Shyne and Busta Rhymes all round out the guest list. The latter three appear on the triumphant outro. “I wanted to make sure the LP went out with as much intensity as it begins with, so I assembled some of the best spitters in all of world to beat the track up,” Wayne says of his album’s ending.\n\n\n
 
		The cast of the album’s producers feature rising stars such as Snizzy and  Keno, Willy Will, Young Fyre,Megaman as well as acclaimed boardsmen Seandrae “Mr. Bangledesh” Crawford, Polow Da Don,Detail and Cool and Dre.\n\n\n
 
		“I really just took my time on this LP,” Wayne described. “There were a few different stages, different incarnations on Tha Carter IV. I had a version of the album that I recorded before I went to jail last year. Then when I came home, I decided to start over for the most part. I had so many new ideas, some new outlooks on things. I wanted to give the people my most up to date perceptions of the world and articulation of my life. At this point, I don’t think I need to say too much about what the quality of the album is going to be. Just know when you hear about anything named Carter, it’s going to be beyond special. My creativity knows no boundaries.”\n\n\n
 
		Lil Wayne’s adventurous life started out in New Orleans, LA. He was born Dwayne Carter in the Uptown section of Hollygrove. Outside of his family, little Lil Wayne had two loves, sports and music. At age eight,Wayne, wrote his first rhymes and immediately had aspirations of being a professional MC. The next year,Wayne caught the attention of Cash Money Records Co-CEO Bryan “Birdman” Williams and his brotherRonald “Slim” Williams, who were just starting their musical empire independently and had gained a swell of support in their hometown.\n\n\n
 
		The Williams brothers were loved for the music they were putting out.   Wayne, determined to follow his dream, approached the brothers one day in a record store with an attempt to catch the attention of his future mentors with his rhymes. Mission accomplished. Not only did Birdman like Weezy’s unique rapid fire style, and boldness in the way he delivered his raps, but the youngster’s audacious nature impressed the budding mogul. Wayne was immediately welcomed into the family and “adopted” as a son by the Williams brothers.  Two years later, at just 11, Wayne would release his first album True Story, a joint effort with label-mate B.G.\n\n\n
 
		In 1997, B.G. and Wayne became a part of one the most influential and lauded hip-hop groups in the history of the culture, The Hot Boys. The foursome, which included Young Turk and Juvenile, not only initiated rap and fashion styles that are still influential today, but the collective, especially Wayne, introduced many slang words and phrases that grew to be a-part of today’s pop culture such as “Bling-Bling” and “Drop it like it’s hot.”\n\n\n
 
		Wayne’s breakout from the group happened in 1999, when he released his classic solo debut Block is Hot. The record debuted at # 3 on the Billboard charts and went onto platinum success. After two more successful LPs, Lights Out (2000) and 500 Degreez (2002), Lil Wayne began to elevate from hip-hop superstar to being a genre breaking pop culture megastar which he cemented with rap’s most popular and successful series of albums ever, Tha Carter.\n\n\n
 
		As a CEO, Wayne’s Young Money Entertainment has become the premier brand in music. No other company has been able to break the amount of new acts with the success of Wayne. His franchise players Drake and Nicki Minaj both became household names in 2010 when both of their LPs Thank Me Later and Pink Friday respectfully debuted at the top of the charts and went on to become multi-platinum.Wayne himself went multi-platinum last year, twice, despite being incarcerated for most of the year. The fans clamored for his releases Rebirth and I Am Not A Human Being.\n\n\n
 
		Tha Carter series (Tha Carter in 2004, Tha Carter II in 2005, Tha Carter III in 2008) has seen Wayne, a  four time Grammy winner, elevate artistically and his status as the biggest name in music continues to grow. This year Lil Wayne alone was named one of Forbes Magazine’s top earning rap stars, Rolling Stone Magazine’s “Hip-Hop Kings,”  and he recently performed on MTV Network’s coveted and legendary “Unplugged” series.  “Every time you hear a Carter album, just know that it is a culmination of my life both musically and professionally up to that point. I’ve always been honest since my first recordings as a child, but on the Carters, I open up like never before and I feel like I’m at my most ferocious on the mic.”\n\n\n
	     
	     
	 </string>
	 <string name="tab_more">More</string>
	   <string name="tab_more_shows">SHOWS</string>
	   <string name="tab_more__store">STORE</string>
	   <string name="tab_more_facebook">FACEBOOK</string>
	   <string name="tab_more_twitter">TWITTER</string>
	   <string name="tab_more_website">WEBSITE</string>
	   <string name="tab_more_follow_us">FOLLOW US</string>
     <string name="donate_title">Support us in 10 sec ;)</string>
	 <string name="donate_t1">You can Help us to still give you nice application in 3 step</string>
	 <string name="donate_t2">\n1 : Click on yes
	     					  \n2 : Install the application / game from market
	     					  \n3 : Open it
	     					  \nThanks for your help, now you can uninstall the downloaded application/game
	     					  if you dont like it :))  </string>
	 <string name="donate_no">No, maybe later</string>
	 <string name="donate_yes">Yes</string>
	    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
	    <string name="enter_fullscreen">Enter Fullscreen</string>
    <string name="landscape_fullscreen">Always fullscreen in landscape</string>
	     <string name="fullscreen_tutorial">This is a demo which shows how to handle fullscreen behaviour. This activity has differents layouts for portrait, landscape and fullscreen. The user can enter fullscreen either by using the player controller or programmatically by the programmer (here using a button). If your activity does not have a landscape layout, you can choose to automatically enter fullscreen when the device is rotated to landscape orientation.</string>
    <string name="title_activity_who_to_follow">WhoToFollowActivity</string>
    <string name="title_activity_test__aymen_2">Test_Aymen_2</string>
    <string name="Sign_In_Google_Plus">Sign in with google plus</string>
    <string name="Sign_In_Facebook">Sign in with facebook</string>
    <string name="loading_text">Initialisation...</string>
    <string name="connection_text">Connection...</string>
    <string name="View_Profile_text">View Profile</string>
    <string name="Nearby_text">Nearby</string>
    <string name="To_Do_text">To do</string>
    <string name="In_Progress_text">In progress</string>
    <string name="Done_text">Done</string>
    <string name="Profile_text">Profile</string>
    <string name="Settings_text">About Us</string>
    <string name="Video_text">Videos</string>
    <string name="Video_Favorites_text">Favorites</string>
    <string name="Music_text">Musics</string>
    <string name="Music_Playlist_text">Playlist</string>
    <string name="Lyrics_text">Lyrics</string>
    <string name="News_text">News</string>
    <string name="NewsMTV_text">MTV News</string>
    <string name="Tweets_text">Tweets</string>
     <string name="Bio_text">Bio</string>
    <string name="Followers_number"> Followers</string>
    <string name="Suggestion_Text"> Suggestions</string>
    <string name="Categorie_Text"> Categories</string>
    <string name="Details_Text"> Details</string>
    <string name="Posts_Text"> Posts</string>
    <string name="Follow"> Do it</string>
    <string name="Follower_Text"> Followers</string>
    <string name="Followers"> Followers</string>
     <string name="Logout_Text"> Log Out</string>
    <string name="profile"> profile</string>
    <string name="change_locale">Change Locale</string>
    <string name="list_moments_title">Touch a moment to delete</string>
    <string name="send_interactive_button_name">Send Interactive Post</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke access</string>
    <string name="share_title">Prefill Text (optional)</string>
    <string name="share_prefill_text">Welcome to the Google+ platform.</string>
    <string name="default_status" />
    <string name="greeting_status">Welcome, %s.</string>
    <string name="greeting_status_sign_in_required">Sign-in required</string>
    <string name="greeting_status_error">Error signing in: %s.</string>
    <string name="loading_status">Loading…</string>
    <string name="signing_in_status">Signing in with Google+.</string>
    <string name="signed_in_status">Signed in as \"%s\".</string>
    <string name="unknown_person">Unknown</string>
    <string name="signed_out_status">Signed out.</string>
    <string name="revoke_access_status">Revoked access.</string>
    <string name="revoke_access_error_status">Unable to revoke access.</string>
    <string name="plus_write_moment_status">Saving moment</string>
</resources>